crates/sc-material/tests/snapshots/hysteresis_snapshots__slip_loop.snap
---
source: crates/sc-material/tests/hysteresis_snapshots.rs
expression: csv
---
theta,M
0.000000,0.000000
0.010000,100.000000
0.000000,0.000000
-0.010000,-100.000000
0.000000,0.000000
0.020000,105.000000
0.000000,0.000000
-0.020000,-105.000000
0.000000,0.000000
0.030000,110.000000
0.000000,0.000000
-0.030000,-110.000000
0.000000,0.000000
0.040000,115.000000
0.000000,0.000000
-0.040000,-115.000000
0.000000,0.000000
